[project]
name = "comfyui-video-xy-plot"
description = "A suite of ComfyUI nodes for generating parameter sweep video matrices with labeled grids. Create comprehensive visual comparisons of how different parameter combinations affect your video generation results."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI XY Video Plot Suite - Dependencies", "# Video processing and grid assembly", "moviepy>=1.0.3", "# Already included in ComfyUI base installation:", "# - torch", "# - numpy", "# - pillow"]

[project.urls]
Repository = "https://github.com/adamdavidcole/comfyui-video-xy-plot"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/adamdavidcole/comfyui-video-xy-plot/wiki"
"Bug Tracker" = "https://github.com/adamdavidcole/comfyui-video-xy-plot/issues"

[tool.comfy]
PublisherId = "acole"
DisplayName = "comfyui-video-xy-plot"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

